Node list edge matcher